[WinCairo] OpenGL compile error. https://bugs.webkit.org/show_bug.cgi?id=125383

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-12-09
Reviewed by Darin Adler.

* platform/graphics/opengl/Extensions3DOpenGLES.h: Define GL_HALF_FLOAT_ARB on Windows when OPENGL_ES_2 is used.

Canonical link: https://commits.webkit.org/143539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160324 268f45cc-cd09-0410-ab3c-d52691b4dbfc